# mid-columbia

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Implementation Plan.md  LICENSE  Project Description.md  README.md  pyproject.toml  render.yaml  settings.json
data/Carlson Creek Restoration/: project.json5
data/Carlson Creek Restoration/Lower Stream/Carlson ATM/: 2026-02-27, GW_Site_ATM,_ID_1,_22332694.csv  2026-03-11, Site_ATM,_ID_1,_22332694_0.csv  2026-04-20, Site_ATM,_ID_1,_22332694.csv  2027-02-27, GW_Site_ATM,_ID_1,_22332694.csv  2027-03-11, Site_ATM,_ID_1,_22332694_0.csv  2027-04-20, Site_ATM,_ID_1,_22332694.csv  Site ATM, ID 1, 22332694.hobo
src/midcolumbia/: catalog.py  config.py  ingest_cli.py  management.py  models.py  serve_cli.py
src/midcolumbia/api/: app.py  deps.py  routes_ingest.py  routes_projects.py  routes_readings.py  routes_wells.py  schemas.py
src/midcolumbia/calculations/: base.py  runner.py  water_depth.py
src/midcolumbia/ingestion/: _util.py  base.py  hoboconnect_xlsx.py  hoboware_csv.py  scanner.py
src/midcolumbia/storage/: db.py
tests/: conftest.py  test_api.py  test_api_management.py  test_api_upload.py  test_calculations_runner.py  test_calculations_water_depth.py  test_catalog.py  test_config.py  test_ingestion_hoboconnect_xlsx.py  test_ingestion_hoboware_csv.py  test_management.py  test_models.py  test_sample_data.py  test_scanner.py  test_storage.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  chart.ts  main.ts  management.ts  map.ts  style.css  tree.ts  types.ts
(+53 files in other folders)
