[project]
name = "midcolumbia"
version = "0.1.0"
description = "Data ingestion and analysis tool for Mid-Columbia Fisheries stream restoration monitoring"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brian Crowley", email = "brian@crowleynet.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "json5>=0.9.25",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "tzdata>=2026.3",
    "uvicorn>=0.51.0",
]

[project.scripts]
midcolumbia-ingest = "midcolumbia.ingest_cli:main"
midcolumbia-serve = "midcolumbia.serve_cli:main"

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
